# scout

./: Cargo.toml
src/: add_file_popup.rs  debug_window.rs  file_man.rs  file_move.rs  key_actions.rs  keyevents.rs  main.rs  main_view.rs  movement_actions.rs  navigation_bar.rs  previewer.rs  search_file_popup.rs  types.rs  utils.rs
src/components/: debug_window.rs  main_view.rs  mod.rs  navigation_bar.rs  previewer.rs
src/poups/: add_file_popup.rs  help_popup.rs  mod.rs  search_file_popup.rs  settings_popup.rs
src/scout_utils/: action_functions.rs  file_man.rs  key_actions.rs  mod.rs  movement_actions.rs  utils.rs
ui/: appwindow.slint
